fixed annoying z-index issue with topic selector overlapping userselector

--- a/styles.css
+++ b/styles.css
@@ -899,6 +899,10 @@ button#poodllconvedit_edcancel:hover,
 	width: 100%;
 }
 
+mod_pchat_togglebuttongroup {
+	z-index: 0;
+}
+
 .mod_pchat_togglebuttongroup .usertoggleitem,
 .mod_pchat_togglebuttongroup .fonttoggleitem {
 	display: block;
